Minor fix to interface

--- a/static/interface.html
+++ b/static/interface.html
@@ -18,7 +18,7 @@
             </div>
             
             <div style="width: 280px; height: 280px; float:left; border:1px solid black; font-size: 280px; line-height: 280px; text-align: center">
-                <span id="num" style="">a</span>
+                <span id="num" style=""></span>
             </div>
         </div>
         
