chore: Clean up folder structure

--- a/app/static/interface.html
+++ b/app/static/interface.html
@@ -105,7 +105,7 @@
                 var fd = new FormData(document.forms["form1"]);
  
                 var xhr = new XMLHttpRequest({mozSystem: true});
-                xhr.open('POST', 'post-data-url', true);
+                xhr.open('POST', 'http://127.0.0.1:5000/post-data-url', true);
 
                 xhr.onreadystatechange = function () {
                     if (xhr.readyState == XMLHttpRequest.DONE) {
